--- a/projects.html
+++ b/projects.html
@@ -67,6 +67,87 @@
                         <a href="https://replit.com/@slytherin2904/How-well-do-you-know-me?embed=1&output=1#README.md" target="_blank"><button class="project-btn">Live View</button></a>
                     </div>
                     </div>
+                    <div class="project project3">
+                        <img src="https://i.imgur.com/PqS3qPS.png" class="project-image"/>
+                        <h4>Talk Bananaaaaa</h4>
+                        <p>A fun translation app that translates english into minion language.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/Talk-banana" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://slytherin20.github.io/Talk-banana/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project4">
+                        <img src="https://i.imgur.com/0rXAkf9.png" class="project-image"/>
+                        <h4>Dothraki Translation App</h4>
+                        <p>This is a translation app that translates plain english into dothraki language.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/Dothraki-Translation-App" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://slytherin20.github.io/Dothraki-Translation-App/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project5">
+                        <img src="https://i.imgur.com/EHpUso4.png" class="project-image"/>
+                        <h4>Music emoji App</h4>
+                        <p>An emoji interpreter app that tells you the meaning of the musical emojis.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/Music-Emoji-Interpreter" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://musicemojiinterpreter.netlify.app/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project6">
+                        <img src="https://i.imgur.com/fSzJBbz.png" class="project-image"/>
+                        <h4>Good Food</h4>
+                        <p>A food recommendation app.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/Good-Food" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://goodfood04.netlify.app/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project7">
+                        <img src="https://i.imgur.com/ikP3JAv.png" class="project-image"/>
+                        <h4>Cash Register</h4>
+                        <p>Cash Register helps in returning the money to the customer by entering the bill amount and the cash amount given by the customer.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/CashRegister" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://slytherin20.github.io/CashRegister/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project8">
+                        <img src="https://i.imgur.com/fJUMdIU.png" class="project-image"/>
+                        <h4>Is your birthday lucky?</h4>
+                        <p>This app tell you if your birthday is lucky by taking your birth date and your lucky number.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/IsYourBirthdayLucky" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://slytherin20.github.io/IsYourBirthdayLucky/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project9">
+                        <img src="https://i.imgur.com/dbmBNjs.png" class="project-image"/>
+                        <h4>Do You Know Triangles?</h4>
+                        <p>A series of fun games to check your knowlege on triangles.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/DoYouKnowTriangles" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://doyouknowtriangles.netlify.app/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project10">
+                        <img src="https://i.imgur.com/2sktiWm.png" class="project-image"/>
+                        <h4>Palindrome Birthday</h4>
+                        <p>Check if your birthday is palindrome or not.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/PalindromeBirthday" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://slytherin20.github.io/PalindromeBirthday/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
+                    <div class="project project11">
+                        <img src="https://i.imgur.com/Wu4IbGG.png" class="project-image"/>
+                        <h4>Stock: Profit or Loss</h4>
+                        <p>Check your profit or loss after buying stock.</p>
+                        <div class="project-btn-grp">
+                            <a href="https://github.com/slytherin20/Stock-ProfitOrLoss" target="_blank"><button class="project-btn">Source Code</button></a>
+                            <a href="https://slytherin20.github.io/Stock-ProfitOrLoss/" target="_blank"><button class="project-btn">Live View</button></a>
+                        </div>
+                    </div>
             </div>
             </div>
     </div>
